--- a/nlp.html
+++ b/nlp.html
@@ -93,7 +93,7 @@
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ghr.wd1.myworkdayjobs.com/Lateral-US/job/Westlake-Village/Data-Scientist--Natural-Language-Processing--NLP--ML---Text-Analytics_19070308-2'>Data Scientist: Natural Language Processing (NLP)</a></h5> 
+<h5><a href='https://ghr.wd1.myworkdayjobs.com/Lateral-US/job/Westlake-Village/Data-Scientist--Natural-Language-Processing--NLP--ML---Text-Analytics_19070308-2'>Data Scientist: Natural Language Processing (NLP)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 21, 2019 ... Create ML models for Advanced OCR and Cognitive Data Extraction capability 
 as well as its execution. Develop, maintain and deploy ML & NLP Pipeline and?...</p>
@@ -118,7 +118,7 @@ as well as its execution. Develop, maintain and deploy ML & NLP Pipeline and?...
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://idsinternational.applytojob.com/apply/csthFvWfhM/Artificial-Intelligence-Natural-Language-Processing-Software-Engineer'>Artificial Intelligence / Natural Language Processing Software Engineer - IDS International - Career Page</a></h5> 
+<h5><a href='http://idsinternational.applytojob.com/apply/csthFvWfhM/Artificial-Intelligence-Natural-Language-Processing-Software-Engineer'>Artificial Intelligence / Natural Language Processing Software Engineer - IDS International - Career Page</a></h5> 
 <p><span class="badge badge-light">Arlington, VA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -134,11 +134,11 @@ as well as its execution. Develop, maintain and deploy ML & NLP Pipeline and?...
 <p><span class="badge badge-light">Mountain View, CA</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://wysdomai.applytojob.com/apply/saWuLwJyCH/NLPML-Developer'>NLP/ML Developer - Wysdom.AI - Career Page</a></h5> 
+<h5><a href='http://wysdomai.applytojob.com/apply/saWuLwJyCH/NLPML-Developer'>NLP/ML Developer - Wysdom.AI - Career Page</a></h5> 
 <p><span class="badge badge-light">Richmond Ontario, Canada</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/ancestry/1b453203-1298-4697-9d76-1b33e9b3cfd2'>Ancestry - Data Scientist (NLP)</a></h5> 
+<h5><a href='https://jobs.lever.co/ancestry/1b453203-1298-4697-9d76-1b33e9b3cfd2'>Ancestry - Data Scientist (NLP)</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
@@ -206,7 +206,7 @@ of the job details and apply today!</p>
 <p><span class="badge badge-light">Seattle Irvine</span></p>
 <p>Posted on: 2019-10-05</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/healthfidelity/jobs/1886165'>Job Application for Clinical Coding and NLP Analyst at Health Fidelity</a></h5> 
+<h5><a href='https://boards.greenhouse.io/healthfidelity/jobs/1886165'>Job Application for Clinical Coding and NLP Analyst at Health Fidelity</a></h5> 
 <p><span class="badge badge-light">Pittsburgh</span></p>
 <p>Posted on: 2019-10-04</p>
 <hr/>
@@ -243,7 +243,7 @@ of the job details and apply today!</p>
 <p>4 days ago ... ... to deliver the right marketing message to the right audience at the right moment 
 and right place, underpinned by a multi-layered data-driven approach. Knorex?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/dataminr/jobs/1885683'>Job Application for Research Internship - Summer 2020 (NLP, Computer Vision, or Machine Learning) at Dataminr</a></h5> 
+<h5><a href='https://boards.greenhouse.io/dataminr/jobs/1885683'>Job Application for Research Internship - Summer 2020 (NLP, Computer Vision, or Machine Learning) at Dataminr</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-09-27</p>
 <hr/>
@@ -283,7 +283,7 @@ and right place, underpinned by a multi-layered data-driven approach. Knorex?...
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-09-20</p>
 <hr/>
-<h5><a href='https://pierce.workable.com/j/066F91BC6C'>Pierce Technology Corp - Jobs: NLP/ML Engineer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://pierce.workable.com/j/066F91BC6C'>Pierce Technology Corp - Jobs: NLP/ML Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-09-15</p>
 <hr/>
@@ -303,7 +303,7 @@ and right place, underpinned by a multi-layered data-driven approach. Knorex?...
 <p><span class="badge badge-light">Bangalore</span></p>
 <p>Posted on: 2019-09-12</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/dataminr/jobs/1862064'>Job Application for Research Scientist (NLP, IR, Complex Networks, Recommender Systems) at Dataminr</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/dataminr/jobs/1862064'>Job Application for Research Scientist (NLP, IR, Complex Networks, Recommender Systems) at Dataminr</a></h5> 
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on: 2019-09-12</p>
 <hr/>
@@ -311,7 +311,7 @@ and right place, underpinned by a multi-layered data-driven approach. Knorex?...
 <p><span class="badge badge-light">New Zealand Auckland</span></p>
 <p>Posted on: 2019-09-12</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://visiblealpha.recruiterbox.com/jobs/fk03fqj'>
+<h5><a href='http://visiblealpha.recruiterbox.com/jobs/fk03fqj'>
     Senior Software Engineer (NLP) at Visible Alpha
 </a></h5> 
 <p><span class="badge badge-light">Mumbai</span></p>
@@ -356,7 +356,7 @@ eHealth (w/m/d) in Freiburg im Breisgau (published: 05.09.2019). Apply now or?..
 <p><span class="badge badge-light">S?o Paulo</span></p>
 <p>Posted on: 2019-09-04</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://causaly.workable.com/jobs/1110826'>Jobs: Senior NLP Engineer (Information Extraction ... - Causaly</a></h5> 
+<h5><a href='https://causaly.workable.com/jobs/1110826'>Jobs: Senior NLP Engineer (Information Extraction ... - Causaly</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Aug 20, 2019 ... The platform turns free-flow text into causal knowledge graphs and applies 
 machine learning to surface new knowledge. We are a VC-backed tech company
@@ -459,7 +459,7 @@ in Barcelona. Review all of the job details and apply today!</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-08-15</p>
 <hr/>
-<h5><a href='https://rakuten.referrals.selectminds.com/jobs/researcher-nlp-rit-9762'>Researcher (NLP) : RIT - Rakuten Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://rakuten.referrals.selectminds.com/jobs/researcher-nlp-rit-9762'>Researcher (NLP) : RIT - Rakuten Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... Some of the research projects can involve parsing, language modelling, machine 
 translation, sentiment analysis, recommendation systems, deep learning,?...</p>
@@ -495,7 +495,7 @@ GumGum enables highly impactful digital advertising campaigns with contextual
 <p>6 days ago ... Apply to Senior Data Scientist, NLP at Fractal Analytics in Mumbai, Maharashtra, 
 India.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.workable.com/j/72EF9FC811'>Amplexor - Jobs: NLP Engineer - Apply online</a></h5> 
+<h5><a href='https://www.workable.com/j/72EF9FC811'>Amplexor - Jobs: NLP Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 27, 2019 ... Apply online for the job of NLP Engineer at Amplexor.</p>
 <hr/>
