--- a/data-science.html
+++ b/data-science.html
@@ -71,6 +71,10 @@
   
       
 <!--Begin body here --> 
+<h5><a href='https://adeccogroup.referrals.selectminds.com/jobs/senior-data-scientist-930'>(Senior) Data Scientist -  The Adecco Group Careers</a></h5> 
+<p><span class="badge badge-light">Zurich, Switzerland</span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qDT9Vfwk&k=Job&j=oggE9fw3&__jvst=Employee&__jvsd=sSFZ9hwr&__jvsc=Twitter&bid=nUklqMwg'>Farfetch Careers - Principal Data Scientist</a></h5> 
 <p><span class="badge badge-light">Lisbon, Portugal</span></p>
 <p>Posted on:: 2019-11-01</p>
@@ -167,7 +171,7 @@ Customer Lifecycle Management & Behavior Team you will be responsible for?...</p
 <p><span class="badge badge-light">Cambridge Cambridge Cambridge, MA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/generalassembly/jobs/935268'>Job Application for Data Science Instructor - Local Lead at General Assembly</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/generalassembly/jobs/935268'>Job Application for Data Science Instructor - Local Lead at General Assembly</a></h5> 
 <p><span class="badge badge-light">Los Angeles  New York</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -235,7 +239,7 @@ Customer Lifecycle Management & Behavior Team you will be responsible for?...</p
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://scorable.recruitee.com/o/data-scientist-nlp-fmdiv'>
+<h5><a href='https://scorable.recruitee.com/o/data-scientist-nlp-fmdiv'>
       Data Scientist NLP (F/M/DIV) - Scorable
     </a></h5> 
 <p><span class="badge badge-light">Berlin, Germany</span></p>
@@ -245,7 +249,7 @@ Customer Lifecycle Management & Behavior Team you will be responsible for?...</p
 <p><span class="badge badge-light">Sunnyvale, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/upside/f9fb4434-08d2-4013-a592-1896d328087d'>Upside - Data Science Business Analyst</a></h5> 
+<h5><a href='https://jobs.lever.co/upside/f9fb4434-08d2-4013-a592-1896d328087d'>Upside - Data Science Business Analyst</a></h5> 
 <p><span class="badge badge-light">Washington, DC</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -253,11 +257,11 @@ Customer Lifecycle Management & Behavior Team you will be responsible for?...</p
 <p><span class="badge badge-light">San Mateo, California</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='http://simpletire.applytojob.com/apply/qcjI8KBSgV/Data-Science-Analyst'>Data Science Analyst - Simpletire - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://simpletire.applytojob.com/apply/qcjI8KBSgV/Data-Science-Analyst'>Data Science Analyst - Simpletire - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=oGI68fwm&__jvst=Employee&__jvsd=sv16Ffw1&__jvsc=Twitter&bid=nQxfpMwi'>Guidewire Software, Inc. Careers - Data Scientist, Cyence - Chennai, India</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=oGI68fwm&__jvst=Employee&__jvsd=sv16Ffw1&__jvsc=Twitter&bid=nQxfpMwi'>Guidewire Software, Inc. Careers - Data Scientist, Cyence - Chennai, India</a></h5> 
 <p><span class="badge badge-light">Chennai, India  Chennai, India  Chennai, India</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -301,7 +305,7 @@ innately curious, a natural born problem solver, a contrarian or a risk taker?</
 <p>5 days ago ... Data Scientist, Senior. The Challenge: Do you want to be a Data Scientist? -Are 
 you innately curious, a natural born problem solver, a contrarian or a risk taker?</p>
 <hr/>
-<h5><a href='https://ghr.wd1.myworkdayjobs.com/Lateral-US/job/Westlake-Village/Data-Scientist--Natural-Language-Processing--NLP--ML---Text-Analytics_19070308-2'>Data Scientist: Natural Language Processing (NLP)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ghr.wd1.myworkdayjobs.com/Lateral-US/job/Westlake-Village/Data-Scientist--Natural-Language-Processing--NLP--ML---Text-Analytics_19070308-2'>Data Scientist: Natural Language Processing (NLP)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 21, 2019 ... Create ML models for Advanced OCR and Cognitive Data Extraction capability 
 as well as its execution. Develop, maintain and deploy ML & NLP Pipeline and?...</p>
@@ -366,11 +370,11 @@ as well as its execution. Develop, maintain and deploy ML & NLP Pipeline and?...
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/aeratechnology/b41ce403-2a98-46b5-a81d-c5ea8015280c'>Aera Technology - Senior Data Scientist - Customer Facing</a></h5> 
+<h5><a href='https://jobs.lever.co/aeratechnology/b41ce403-2a98-46b5-a81d-c5ea8015280c'>Aera Technology - Senior Data Scientist - Customer Facing</a></h5> 
 <p><span class="badge badge-light">Pune, India</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/wealthfront/476b618d-0d73-45f8-89a2-c3887c7d6d95'>Wealthfront - Data Science Intern</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/wealthfront/476b618d-0d73-45f8-89a2-c3887c7d6d95'>Wealthfront - Data Science Intern</a></h5> 
 <p><span class="badge badge-light">Palo Alto, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -390,7 +394,7 @@ as well as its execution. Develop, maintain and deploy ML & NLP Pipeline and?...
 <p><span class="badge badge-light">Washington, DC</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://thinkingmachin.es/careers/web-engineer/'>Web Engineer - Thinking Machines Data Science</a></h5> 
+<h5><a href='https://thinkingmachin.es/careers/web-engineer/'>Web Engineer - Thinking Machines Data Science</a></h5> 
 <p><span class="badge badge-light">Philippines</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -438,7 +442,7 @@ as well as its execution. Develop, maintain and deploy ML & NLP Pipeline and?...
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/SoftwareTechnologyInc2/743999698405739-hiring-data-scientist-mettawa-il-fulltime'>Software Technology Inc Hiring---Data Scientist--Mettawa, IL--Fulltime | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/SoftwareTechnologyInc2/743999698405739-hiring-data-scientist-mettawa-il-fulltime'>Software Technology Inc Hiring---Data Scientist--Mettawa, IL--Fulltime | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -477,10 +481,6 @@ as well as its execution. Develop, maintain and deploy ML & NLP Pipeline and?...
 <h5><a href='https://jobs.lever.co/escale/ccb0b34e-7e91-4415-8bf7-cfd6c3c250f1'>Escale - Data Scientist</a></h5> 
 <p><span class="badge badge-light">S?o Paulo S?o Paulo  S?o Paulo Brazil</span></p>
 <p>Posted on: 2019-10-28</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=quP9Vfw7&k=Job&j=oD7fafwT&__jvst=Employee+Referral&__jvsd=sxe4Bgwb&__jvsc=Twitter&bid=n4NSmMwm'>Align Technology Careers - Senior Data Scientist/Statistician</a></h5> 
-<p><span class="badge badge-light">San Jose, California</span></p>
-<p>Posted on:: 2019-10-28</p>
 <hr/>
 
 
